labs/5_services/fortune-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fortune
  labels:
    app: generatorsvc
spec:
  containers:
  - name: web
    image: rg.fr-par.scw.cloud/ilkilabs/webapache:v1
    ports:
      - containerPort: 80
      - containerPort: 22
  - name: generator
    image: rg.fr-par.scw.cloud/ilkilabs/fortunegen:v1
