labs/5_services/pod-multi-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: chucknorris
  labels:
    app: generatorsvc
spec:
  containers:
  - name: webfront
    image: rg.fr-par.scw.cloud/ilkilabs/webapache:v1
    ports:
      - containerPort: 80
      - containerPort: 22
  - name: generator
    image: rg.fr-par.scw.cloud/ilkilabs/chuckgen:v2
