labs/5_services/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: generatorsvc
  ports:
    - port: 81
      targetPort: 80
