labs/5_services/service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gen
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - izwane.dev
      secretName: iwane-tls-secret
  rules:
    - host: izwane.dev
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: web-nodeport
                port:
                  number: 81
